# ddl

./: .gitignore  README.md  cluster.ipynb  eda_plantvillage.ipynb  environment.yml  pyproject.toml  requirements-core.txt  requirements-cu128.txt  requirements-gpu-nightly-cu128.txt  requirements.txt  tune_lenet5_mnist.ipynb  tune_simplecnn_cifar10.ipynb
analysis/: benchmark_analysis.ipynb
client/: pyproject.toml
client/ddl_client/: __init__.py  cli.py
deploy/: check_clients.sh  common.sh  deploy_all.sh  deploy_data.sh  nodes.conf  setup.sh  start_superlink.sh  start_supernodes.sh  start_training.sh  stop_all.sh
fl_app/: adaptive.py  artifacts.py  client_app.py  data.py  models.py  profiling.py  scheduler.py  server_app.py  server_data.py  strategies.py  task.py  training.py
fl_app/models/: __init__.py
fl_app/models/cifar100/: __init__.py  cct.py  efficientnet.py  se_resnet.py  simple_cnn.py  wrn.py
food101_effnet/: config.py  data.py  models.py  optim.py  train_food101.py  train_loop.py  utils.py
food101_effnet/graphics/: plot_aug_curves.py  plot_ls_curves.py  plot_wd_curves.py
local_exp/cifar10__resnet18_cifar/: config.json  metrics.csv
notebooks/: cifar100_eda.py  cifar100_model_test.ipynb  cluster.ipynb  plantvillage_model_test.ipynb  server_algo_test.ipynb
runconfig/: dirichlet_a0.3.json  iid_fast.json  iid_stable.json
runs/20251111_155526_base/: config.json  log.csv  summary.json
runs/20251111_162718_lr1e-4/: config.json  env.txt  log.csv  summary.json
runs/20251111_164723_lr3e-4/: config.json  log.csv  summary.json
runs/20251111_170734_lr1e-3/: config.json  log.csv  summary.json
runs/20251111_172754_lr3e-3/: config.json  log.csv  summary.json
runs/20251125_191541_aug_basic_lr3e-4/: config.json  log.csv  summary.json
runs/20251125_193411_aug_geo_lr3e-4/: config.json  log.csv  summary.json
runs/20251125_195259_aug_color_lr3e-4/: config.json  log.csv  summary.json
runs/20251125_201402_aug_erasing_lr3e-4/: config.json  log.csv  summary.json
runs/20251125_203644_aug_auto_lr3e-4/: config.json  log.csv  summary.json
runs/20251125_211258_erasing_bs128_lr3e-4/: config.json  log.csv  summary.json
runs/20251125_220500_erasing_bs64_ls0.0/: config.json  log.csv  summary.json
runs/20251125_222231_erasing_bs64_ls0.1/: config.json  log.csv  summary.json
runs/20251125_225213_erasing_bs64_ls0.15/: config.json  log.csv  summary.json
runs/20251125_231809_erasing_bs64_ls0.15_wd0/: config.json  log.csv  summary.json
runs/20251125_233905_erasing_bs64_ls0.15_wd3e-5/: config.json  log.csv  summary.json
runs/20251125_235622_erasing_bs64_ls0.15_wd1e-4/: config.json  log.csv  summary.json
runs/20251126_001635_erasing_bs64_ls0.15_wd3e-4/: config.json  log.csv  summary.json
runs/cifar10_dirichlet_a0/: aggregated_metrics.json
runs/cifar10_iid_K10_seed42/: aggregated_metrics.json
runs/cifar10_iid_K6_seed42/: aggregated_metrics.json
runs/fedavg_iid_r2/: config.json  metrics.csv
runs/fedavg_iid_r3/: config.json
runs/fedavg_iid_r5/: config.json  metrics.csv
scripts/: check_cuda.py  check_split_stats.py  cluster_utils.py  cuda_check.py  debug_flower.py  download_and_check_cifar10.py  download_datasets.py  load_models.py  local_train.py  make_graf.py  make_splits.py  partition_utils.py  prepare_cifar10.py  preview_cifar10.py  preview_cifar10_test.py  split_check.py  test_client.py  test_data_loading.py  test_final_model.py  test_server.py  test_traning.py  visualize_splits.py
splits/: cifar10_dirichlet_a0.3_K20_seed42.json  cifar10_iid_K20_seed42.json
src/: callbacks.py  fl_client.py  model.py  train_utils.py
src/datasets/: partition.py
