# =====================================================================
# Flower app configuration
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddl-flower-app"
version = "1.0.0"
description = "Federated Learning app"
license = "Apache-2.0"

dependencies = [
    "flwr>=1.22.0",
    "datasets>=2.0.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "nxhxl"

[tool.flwr.app.components]
serverapp = "fl_app.server_app:app"
clientapp = "fl_app.client_app:app"

# -----------------------------------------------------
# Experiment config — только "что запускать"
# Гиперпараметры модели → fl_app/models.py
# Параметры стратегии   → fl_app/strategies.py
# -----------------------------------------------------
[tool.flwr.app.config]
partition-name      = "cifar10__dirichlet__a0.2__m0__n6__s42"
model               = "cifarcnn"    # cifarcnn | lenet5
aggregation         = "fedavg"     # fedavg | fedprox | fedavgm | fedadam | fedyogi | fedadagrad | fedmedian | fedtrimmedavg | krum | multikrum | bulyan

# FL infrastructure
num-server-rounds   = 30
fraction-train      = 1.0
min-train-nodes     = 6
min-available-nodes = 6

local-epochs = 3        # локальных эпох обучения на каждом клиенте за раунд
data-dir     = "data/"

enable-profiling = "true"   # профилировочный раунд перед обучением (false — отключить)
adaptive-mode    = "maximize-chunk"  # maximize-epochs | maximize-chunk

[tool.flwr.federations]
default = "yandex-cloud"

[tool.flwr.federations.yandex-cloud]
address = "84.201.165.255:9093"
insecure = true
