# =====================================================================
# Flower app configuration
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddl-flower-app"
version = "1.0.0"
description = "Federated Learning app"
license = "Apache-2.0"

dependencies = [
    "flwr>=1.22.0",
    "datasets>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "nxhxl"

[tool.flwr.app.components]
serverapp = "fl_app.server_app:app"
clientapp = "fl_app.client_app:app"

# -----------------------------------------------------
# Experiment config — только "что запускать"
# Гиперпараметры модели → fl_app/models/__init__.py
# Параметры стратегии   → fl_app/strategies.py
# -----------------------------------------------------
[tool.flwr.app.config]
# Режим данных: research (партиции) | production (данные клиента)
data-mode = "research"

# Research mode: имя партиции (игнорируется в production)
partition-name = "cifar100__iid__n5__s42"

model       = "wrn_28_4"     # из MODEL_REGISTRY
aggregation = "fedavg"       # fedavg | fedprox | ... | scaffold

# FL infrastructure
num-server-rounds   = 3
fraction-train      = 1.0
min-train-nodes     = 5
min-available-nodes = 5

local-epochs = 3        # локальных эпох обучения на каждом клиенте за раунд
data-dir     = "data/"

enable-profiling = "false"  # профилировочный раунд перед обучением (false — отключить)
adaptive-mode    = "maximize-epochs"  # maximize-epochs | maximize-chunk

server-mode = "disabled"  # disabled | shared | exclusive

[tool.flwr.federations]
default = "remote"

[tool.flwr.federations.remote]
address = "83.149.250.70:9093"
insecure = true
