# =====================================================================
# Flower app configuration
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddl-flower-app"
version = "1.0.0"
description = "Federated Learning app"
license = "Apache-2.0"

dependencies = [
    "flwr>=1.28.0",
    "datasets>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "matplotlib>=3.5.0",
    "pandas>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fl_app", "scripts"]

[tool.flwr.app]
publisher = "nxhxl"

[tool.flwr.app.components]
serverapp = "fl_app.server_app:app"
clientapp = "fl_app.client_app:app"

# -----------------------------------------------------
# Experiment config — только "что запускать"
# Гиперпараметры модели → fl_app/models/__init__.py
# Параметры стратегии   → fl_app/strategies.py
# -----------------------------------------------------
[tool.flwr.app.config]
# Что запускать
partition-name = "cifar100__dirichlet__a0.05__m0__n10__s42"
model          = "wrn_16_4"   # wrn_16_4 | se_resnet
aggregation    = "fedavg"     # fedavg | fedavgm | fedprox | scaffold

# FL infrastructure
enable-profiling    = "false"   # "true" → профилировочный раунд перед FL
benchmark-samples   = 1000
benchmark-epochs    = 2
num-server-rounds   = 80
fraction-train      = 1.0
min-train-nodes     = 10
min-available-nodes = 10
local-epochs        = 2

# Клиентские гиперпараметры — дефолты (можно переопределить per-strategy ниже)
client-lr           = 0.03
client-momentum     = 0.9
client-weight-decay = 5e-4
batch-size          = 64

# Per-strategy оверрайды (формат: {agg}-client-lr / {agg}-local-epochs / {agg}-client-momentum)
fedavg-client-lr      = 0.1
fedavg-local-epochs   = 3

fedavgm-client-lr     = 0.05
fedavgm-local-epochs  = 3

fedprox-client-lr     = 0.1
fedprox-local-epochs  = 3

scaffold-client-lr    = 0.3
scaffold-local-epochs = 5

# Пути
data-dir        = "data/"
experiments-dir = "simulation"   # simulation | experiments

# Параметры стратегий (игнорируются неподходящими)
proximal-mu      = 0.005  # FedProx
server-momentum  = 0.5    # FedAvgM (τ=2 раунда разгона, steady=2×Δ)
server-lr        = 1.0    # FedAvgM


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-sim"

# [tool.flwr.federations.local-sim]
# options.num-supernodes = 10
# options.backend.client-resources.num-cpus = 0.5
# options.backend.client-resources.num-gpus = 0.1
