[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddl-fl-client"
version = "0.1.0"
description = "Federated Learning client for plant disease classification"
license = "Apache-2.0"
requires-python = ">=3.10"

dependencies = [
    "flwr>=1.22.0",
    "datasets>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ddl_client"]

[project.scripts]
ddl-client = "ddl_client.cli:main"
